# kki-test-be

./: .env.example  .gitignore  README.md  collection.json  pyproject.toml  requirements.txt
api/: urls.py
api/book/: serializers.py  urls.py  views.py
api/category/: serializers.py  urls.py  views.py
config/: settings.py
database/migrations/: 0001_initial.py
database/models/: __init__.py  base.py  book.py  category.py
helpers/: pagination.py  request.py  response.py
tests/category/: endpoints.py  test_views.py
tests/category/fixtures/: __init__.py
